--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.4",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
